# api/controllers/OrderController.js
@@ -25,18 +25,26 @@ const getOrderById = async (req, res) => {
 const createOrder = async (req, res) => {
     const {
         user,
-        items
+        items,
+        totalPrice,
+        feePrice,
+        paymentMethod,
+        address,
     } = req.body;
     try {
         const order = new OrderModel({
             user,
-            items
+            items,
+            totalPrice,
+            feePrice,
+            paymentMethod,
+            address,
         });
         await order.save();
         res.status(201).json(order);
     } catch (error) {
         if (error.name === 'ValidationError') {
-            return res.status(400).json({"message": error.message});
+            return res.status(400).json({ "message": error.message });
         } else {
             res.status(500).json({ error: 'Failed to create order' });
         }
